--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,8 @@
-html {
-  background-color: #ffccbb;
-  font-family: "Roboto", sans-serif;
-  font-size: 18px;
-  letter-spacing: 1px;
-}
-
 body {
+  background-color: #ffccbb;
+  font-family: sans-serif;
+  letter-spacing: 1px;
   margin: 10px;
-  padding: 10px;
   text-align: left;
 }
 
@@ -23,8 +18,6 @@ td {
 
 img {
   display: block;
-  height: 300px;
-  width: auto;
 }
 
 p {
@@ -50,6 +43,11 @@ h2 {
 
 ul {
   margin-bottom: auto;
+}
+
+.img {
+  display: block;
+  vertical-align: top;
 }
 
 .box {
