--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: #ffccbb;
   font-family: sans-serif;
+  font-size: medium;
   letter-spacing: 1px;
   margin: 10px;
   text-align: left;
